--- a/RNN_project.html
+++ b/RNN_project.html
@@ -11914,7 +11914,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x7f1e0ee31198&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x7fb755ec9d68&gt;</pre>
 </div>
 
 </div>
@@ -12639,7 +12639,7 @@ _________________________________________________________________
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;keras.callbacks.History at 0x7f1df43074e0&gt;</pre>
+<pre>&lt;keras.callbacks.History at 0x7fb7143e5a20&gt;</pre>
 </div>
 
 </div>
@@ -14034,83 +14034,83 @@ $$a\longleftarrow\left[\begin{array}{c}
 <pre>Epoch 1/40
 10000/10000 [==============================] - 23s - loss: 3.0343    
 Epoch 2/40
-10000/10000 [==============================] - 22s - loss: 2.8879    
+10000/10000 [==============================] - 23s - loss: 2.8879    
 Epoch 3/40
-10000/10000 [==============================] - 22s - loss: 2.8660    
+10000/10000 [==============================] - 23s - loss: 2.8660    
 Epoch 4/40
-10000/10000 [==============================] - 22s - loss: 2.8318    
+10000/10000 [==============================] - 23s - loss: 2.8319    
 Epoch 5/40
-10000/10000 [==============================] - 22s - loss: 2.7856    
+10000/10000 [==============================] - 23s - loss: 2.7857    
 Epoch 6/40
-10000/10000 [==============================] - 23s - loss: 2.7243    
+10000/10000 [==============================] - 23s - loss: 2.7244    
 Epoch 7/40
-10000/10000 [==============================] - 22s - loss: 2.6430    
+10000/10000 [==============================] - 23s - loss: 2.6433    
 Epoch 8/40
-10000/10000 [==============================] - 22s - loss: 2.5868    
+10000/10000 [==============================] - 23s - loss: 2.5870    
 Epoch 9/40
-10000/10000 [==============================] - 22s - loss: 2.5217    
+10000/10000 [==============================] - 23s - loss: 2.5220    
 Epoch 10/40
-10000/10000 [==============================] - 22s - loss: 2.4715    
+10000/10000 [==============================] - 23s - loss: 2.4718    
 Epoch 11/40
-10000/10000 [==============================] - 22s - loss: 2.4285    
+10000/10000 [==============================] - 23s - loss: 2.4287    
 Epoch 12/40
-10000/10000 [==============================] - 22s - loss: 2.3903    
+10000/10000 [==============================] - 23s - loss: 2.3904    
 Epoch 13/40
-10000/10000 [==============================] - 22s - loss: 2.3562    
+10000/10000 [==============================] - 23s - loss: 2.3562    
 Epoch 14/40
-10000/10000 [==============================] - 22s - loss: 2.3232    
+10000/10000 [==============================] - 23s - loss: 2.3237    
 Epoch 15/40
-10000/10000 [==============================] - 22s - loss: 2.2891    
+10000/10000 [==============================] - 23s - loss: 2.2961    
 Epoch 16/40
-10000/10000 [==============================] - 22s - loss: 2.2711    
+10000/10000 [==============================] - 23s - loss: 2.2696    
 Epoch 17/40
-10000/10000 [==============================] - 22s - loss: 2.2478    
+10000/10000 [==============================] - 23s - loss: 2.2472    
 Epoch 18/40
-10000/10000 [==============================] - 22s - loss: 2.2219    
+10000/10000 [==============================] - 23s - loss: 2.2241    
 Epoch 19/40
-10000/10000 [==============================] - 22s - loss: 2.2064    
+10000/10000 [==============================] - 23s - loss: 2.2019    
 Epoch 20/40
-10000/10000 [==============================] - 22s - loss: 2.1795    
+10000/10000 [==============================] - 23s - loss: 2.1797    
 Epoch 21/40
-10000/10000 [==============================] - 22s - loss: 2.1653    
+10000/10000 [==============================] - 23s - loss: 2.1656    
 Epoch 22/40
-10000/10000 [==============================] - 22s - loss: 2.1429    
+10000/10000 [==============================] - 23s - loss: 2.1450    
 Epoch 23/40
-10000/10000 [==============================] - 23s - loss: 2.1229    
+10000/10000 [==============================] - 23s - loss: 2.1228    
 Epoch 24/40
-10000/10000 [==============================] - 22s - loss: 2.1073    
+10000/10000 [==============================] - 23s - loss: 2.1063    
 Epoch 25/40
-10000/10000 [==============================] - 22s - loss: 2.0889    
+10000/10000 [==============================] - 23s - loss: 2.0883    
 Epoch 26/40
-10000/10000 [==============================] - 22s - loss: 2.0714    
+10000/10000 [==============================] - 23s - loss: 2.0720    
 Epoch 27/40
-10000/10000 [==============================] - 22s - loss: 2.0491    
+10000/10000 [==============================] - 23s - loss: 2.0483    
 Epoch 28/40
-10000/10000 [==============================] - 22s - loss: 2.0305    
+10000/10000 [==============================] - 23s - loss: 2.0340    
 Epoch 29/40
-10000/10000 [==============================] - 22s - loss: 2.0134    
+10000/10000 [==============================] - 23s - loss: 2.0154    
 Epoch 30/40
-10000/10000 [==============================] - 22s - loss: 1.9926    
+10000/10000 [==============================] - 22s - loss: 1.9913    
 Epoch 31/40
-10000/10000 [==============================] - 22s - loss: 1.9712    
+10000/10000 [==============================] - 23s - loss: 1.9734    
 Epoch 32/40
 10000/10000 [==============================] - 23s - loss: 1.9532    
 Epoch 33/40
-10000/10000 [==============================] - 23s - loss: 1.9316    
+10000/10000 [==============================] - 23s - loss: 1.9329    
 Epoch 34/40
-10000/10000 [==============================] - 23s - loss: 1.9174    
+10000/10000 [==============================] - 23s - loss: 1.9175    
 Epoch 35/40
-10000/10000 [==============================] - 23s - loss: 1.8905    
+10000/10000 [==============================] - 23s - loss: 1.8913    
 Epoch 36/40
-10000/10000 [==============================] - 23s - loss: 1.8709    
+10000/10000 [==============================] - 23s - loss: 1.8716    
 Epoch 37/40
-10000/10000 [==============================] - 23s - loss: 1.8495    
+10000/10000 [==============================] - 23s - loss: 1.8504    
 Epoch 38/40
-10000/10000 [==============================] - 22s - loss: 1.8237    
+10000/10000 [==============================] - 23s - loss: 1.8245    
 Epoch 39/40
-10000/10000 [==============================] - 22s - loss: 1.8013    
+10000/10000 [==============================] - 23s - loss: 1.8044    
 Epoch 40/40
-10000/10000 [==============================] - 22s - loss: 1.7816    
+10000/10000 [==============================] - 23s - loss: 1.7805    
 </pre>
 </div>
 </div>
@@ -14221,70 +14221,70 @@ input chars =
 ed my questioning glances. beyond the obvious facts that he has at some time done manual labour, tha&#34;
 
 predicted chars = 
-t in the coure hour has ing and the has ing and the courd hoom hor har ing the sis and coured on the&#34;
+t in the coure and and colled so the sing and the couch have sour in the sert of the couchach and wh&#34;
 
 ------------------
 input chars = 
 bez wilson, said my assistant, and he is willing to fill a vacancy in the league.   and he is admira&#34;
 
 predicted chars = 
-ne the mast the courd hoom hor har ing the sis and coured in the sing and the courd hoom hor her she&#34;
+ne the mast the hare hour has in the couth of the court of the couch has was in the sing and the cou&#34;
 
 ------------------
 input chars = 
 hat his ears are pierced for earrings?  yes, sir. he told me that a gipsy had done it for him when h&#34;
 
 predicted chars = 
-e was in the sert of the coust of and whe his had in the sing of the couct of and whe had i have see&#34;
+as and been in the rour the rour hoo har ing of the court of the coure hour has sere so be the hove &#34;
 
 ------------------
 input chars = 
  it is all right, said the stranger with deference. still, i confess that i miss my rubber. it is th&#34;
 
 predicted chars = 
-e pored in the coust and the courd hoo mas in the sing of the coure hour has in the sert of the coup&#34;
+e wand whe has in the sert of the couch has was in whin i har ing ard corersers and chere so the ser&#34;
 
 ------------------
 input chars = 
 s no doubt that you have detected and defeated in the most complete manner one of the most determine&#34;
 
 predicted chars = 
- houred of the cont the was in was in the rish chat it the has the wall doun the sout the coust of t&#34;
+ houred and the have her and the courd hoom har ing of the hare houred of the sing of the courchachi&#34;
 
 ------------------
 input chars = 
  boy in buttons entered to announce miss mary sutherland, while the lady herself loomed behind his s&#34;
 
 predicted chars = 
-ere in the couch coom the has in the sert of the couch mas in was in the sing of the couct of and wh&#34;
+ean the rour hoom hare sour has she could and the wald whow has in the rere the rour hoo mare the ha&#34;
 
 ------------------
 input chars = 
  anything since then to throw any light upon what became of him.  it seems to me that you have been &#34;
 
 predicted chars = 
-the shere hour has in the sert of the coupt of the wall whow has shere so the coom ho mand whe has i&#34;
+the shere hour has in the seat in wall se the sing and the couch hoom has in the sing and there sour&#34;
 
 ------------------
 input chars = 
 vity was engaging my own attention at the time, and the whole of next day i was busy at the bedside &#34;
 
 predicted chars = 
-in the core more she couch hoo she hour hoo mere the has ing and the coure hour sor in the cout of t&#34;
+of the court of the cours and the cour hoo mas in the couth a dour the hour ho mas in the couth a do&#34;
 
 ------------------
 input chars = 
 oning, i remarked.  well, of course it was obvious from the first that this mr. hosmer angel must ha&#34;
 
 predicted chars = 
-s she poon the has the was in the serting of the court of the couch has sour in the sing of the couc&#34;
+s she been the sing of the couch couchad in was in the rour hor hor shere the has a dour the sing an&#34;
 
 ------------------
 input chars = 
  of quietly digesting their breakfasts at home.  i am afraid, said i, that the facts are so obvious &#34;
 
 predicted chars = 
-on the stor mase the have she have the mas it the courd hoo mas in the couth of the coure hour has i&#34;
+ou has in the mane the courd hoo mas in the sing and there sore houred of the store has are and and &#34;
 
 </pre>
 </div>
@@ -14308,7 +14308,7 @@ on the stor mase the have she have the mas it the courd hoo mas in the couth of 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[33]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">### A simple way to write output to file</span>
@@ -14332,7 +14332,7 @@ on the stor mase the have she have the mas it the courd hoo mas in the couth of 
 
 
 <div class="output_area">
-<div class="prompt output_prompt">Out[&nbsp;]:</div>
+<div class="prompt output_prompt">Out[33]:</div>
 
 
 
@@ -14369,7 +14369,7 @@ on the stor mase the have she have the mas it the courd hoo mas in the couth of 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[34]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># a small subset of our input/output pairs</span>
@@ -14414,13 +14414,66 @@ on the stor mase the have she have the mas it the courd hoo mas in the couth of 
 <div class="prompt"></div>
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>100000/100000 [==============================] - 252s - loss: 2.0278   
+<pre>100000/100000 [==============================] - 232s - loss: 2.0282   
 Epoch 2/30
-100000/100000 [==============================] - 236s - loss: 1.9353   
+100000/100000 [==============================] - 231s - loss: 1.9359   
 Epoch 3/30
-100000/100000 [==============================] - 234s - loss: 1.8703   
+100000/100000 [==============================] - 231s - loss: 1.8711   
 Epoch 4/30
- 52500/100000 [==============&gt;...............] - ETA: 112s - loss: 1.8243</pre>
+100000/100000 [==============================] - 232s - loss: 1.8167   
+Epoch 5/30
+100000/100000 [==============================] - 232s - loss: 1.7696   
+Epoch 6/30
+100000/100000 [==============================] - 231s - loss: 1.7267   
+Epoch 7/30
+100000/100000 [==============================] - 231s - loss: 1.6887   
+Epoch 8/30
+100000/100000 [==============================] - 231s - loss: 1.6508   
+Epoch 9/30
+100000/100000 [==============================] - 231s - loss: 1.6165   
+Epoch 10/30
+100000/100000 [==============================] - 232s - loss: 1.5828   
+Epoch 11/30
+100000/100000 [==============================] - 232s - loss: 1.5506   
+Epoch 12/30
+100000/100000 [==============================] - 232s - loss: 1.5197   
+Epoch 13/30
+100000/100000 [==============================] - 232s - loss: 1.4895   
+Epoch 14/30
+100000/100000 [==============================] - 231s - loss: 1.4599   
+Epoch 15/30
+100000/100000 [==============================] - 232s - loss: 1.4305   
+Epoch 16/30
+100000/100000 [==============================] - 231s - loss: 1.4015   
+Epoch 17/30
+100000/100000 [==============================] - 231s - loss: 1.3720   
+Epoch 18/30
+100000/100000 [==============================] - 231s - loss: 1.3437   
+Epoch 19/30
+100000/100000 [==============================] - 232s - loss: 1.3155   
+Epoch 20/30
+100000/100000 [==============================] - 232s - loss: 1.2863   
+Epoch 21/30
+100000/100000 [==============================] - 232s - loss: 1.2579   
+Epoch 22/30
+100000/100000 [==============================] - 232s - loss: 1.2301   
+Epoch 23/30
+100000/100000 [==============================] - 231s - loss: 1.2022   
+Epoch 24/30
+100000/100000 [==============================] - 232s - loss: 1.1746   
+Epoch 25/30
+100000/100000 [==============================] - 232s - loss: 1.1463   
+Epoch 26/30
+100000/100000 [==============================] - 232s - loss: 1.1190   
+Epoch 27/30
+100000/100000 [==============================] - 232s - loss: 1.0937   
+Epoch 28/30
+100000/100000 [==============================] - 232s - loss: 1.0646   
+Epoch 29/30
+100000/100000 [==============================] - 232s - loss: 1.0412   
+Epoch 30/30
+100000/100000 [==============================] - 232s - loss: 1.0165   
+</pre>
 </div>
 </div>
 
@@ -14430,7 +14483,7 @@ Epoch 4/30
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[35]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># TODO: choose an input sequence and use the prediction function in the previous Python cell to predict 100 characters following it</span>
@@ -14466,6 +14519,101 @@ Epoch 4/30
 </pre></div>
 
 </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+<div class="prompt"></div>
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>-------------------
+
+input chars = 
+ed my questioning glances. beyond the obvious facts that he has at some time done manual labour, tha&#34;
+
+predicted chars = 
+t i was a berined of miser s and withand said in preccount your canfing in the ither. i confedsed th&#34;
+
+-------------------
+
+input chars = 
+bez wilson, said my assistant, and he is willing to fill a vacancy in the league.   and he is admira&#34;
+
+predicted chars = 
+ble of the bords. i have a coused sile of the last that i have in his attered the door and the came &#34;
+
+-------------------
+
+input chars = 
+hat his ears are pierced for earrings?  yes, sir. he told me that a gipsy had done it for him when h&#34;
+
+predicted chars = 
+e had he drapped and every man who had been thinks which i have deen the dart of the handsow to get &#34;
+
+-------------------
+
+input chars = 
+ it is all right, said the stranger with deference. still, i confess that i miss my rubber. it is th&#34;
+
+predicted chars = 
+e morning and the can a some seeple she little mark wo love and weth to in the drapped and the corne&#34;
+
+-------------------
+
+input chars = 
+s no doubt that you have detected and defeated in the most complete manner one of the most determine&#34;
+
+predicted chars = 
+d to the strange at of encert of the strange at and with she had been almary and extenting the lang &#34;
+
+-------------------
+
+input chars = 
+ boy in buttons entered to announce miss mary sutherland, while the lady herself loomed behind his s&#34;
+
+predicted chars = 
+toliting with a store which should be the haddsere of ever that i should be her have and a fine and &#34;
+
+-------------------
+
+input chars = 
+ anything since then to throw any light upon what became of him.  it seems to me that you have been &#34;
+
+predicted chars = 
+cless my hish, and the case of the corner of an and the can of the litter minst of the corner of as &#34;
+
+-------------------
+
+input chars = 
+vity was engaging my own attention at the time, and the whole of next day i was busy at the bedside &#34;
+
+predicted chars = 
+remerts all thiss is noteres. she lat fol our bely away nowe, we entered. i have tome it it very upo&#34;
+
+-------------------
+
+input chars = 
+oning, i remarked.  well, of course it was obvious from the first that this mr. hosmer angel must ha&#34;
+
+predicted chars = 
+ve been cle soliter s into the courts.  you are no reation of his from his soll call i and aware to &#34;
+
+-------------------
+
+input chars = 
+ of quietly digesting their breakfasts at home.  i am afraid, said i, that the facts are so obvious &#34;
+
+predicted chars = 
+the place which was a somple drow his faces. he was all thre window which you drearded the gord. i w&#34;
+
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
